  - export format: xml
  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Debug:
* libfwevt: character reference print trailing data

Recovery:
* scan for records in chunk free space

20130110
* updated manuals
* worked on pyevtx

20130109
* worked on pyevtx

20130107
* 2013 update
* updated dependencies

20121220
* worked on formatted message strings
* fixed for multi platform builds

20121219
* worked on formatted message strings

20121218
* worked on formatted message strings

20121217
* worked on formatted message strings

20121214
* worked on formatted message strings
* evtxexport: added decimal event number

20121213
* worked on formatted message strings

20121212
* worked on formatted message strings

20121125
* worked on formatted message strings
* evtxexport: detect double newlines and remove
* updated dependencies

20121122
* pyevtx: code clean up

20121119
* worked on formatted message strings
* updated libfwevt

20121104
* pyevtx: bug fixes
* updated dependencies
* code clean up

20121031
* worked on formatted message strings

20121030
* code clean up
* worked on message string object
* worked on formatted message strings

20121029
* worked on formatted message strings
* code clean up

20121028
* worked on formatted message strings

20121027
* worked on formatted message strings

20121025
* added examples and tests directories
* worked on user security identifier function

20121022
* worked on provider identifier support

20121021
* worked on provider identifier support
* worked on libfwevt

20121020
* worked on provider identifier support

20121019
* worked on formatted message strings
  - added support for case change in mui filename expansion
* worked on libevtx
  - added support for Binary
  - added support for UserData

20121018