@@ -71,6 +71,10 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20130113
+* updated msvscpp files
+* updated examples
+
 20130110
 * updated manuals
 * worked on pyevtx
